=== HEAD

* Deprecate Array#to_sql, String#to_sql, and String#split_sql (jeremyevans)

* Deprecate passing an array to Database#<< (jeremyevans)

* Deprecate Range#interval (jeremyevans)

* Deprecate Enumerable#send_each (jeremyevans)

* Deprecate Hash#key on ruby 1.8, change some SQLite adapter constants (jeremyevans)

* Deprecate Sequel.open, Sequel.use_parse_tree=?, and the upcase_identifier methods (jeremyevans)

* Deprecate virtual row blocks without block arguments, unless Sequel.virtual_row_instance_eval is enabled (jeremyevans)

* Support schema parsing in the Oracle adapter (jacaetevha)

* Allow virtual row blocks to be instance_evaled, add Sequel.virtual_row_instance_eval= (jeremyevans)

=== 2.11.0 (2009-03-02)

* Optimize Model.[] by using static sql when possible, for a 30-40% speed increase (jeremyevans)

* Add Dataset#with_sql, which returns a clone of the datatset with static SQL (jeremyevans)

* Refactor Dataset#literal so it doesn't need to be overridden in subadapters, for a 20-25% performance increase (jeremyevans)

* Remove SQL::IrregularFunction, no longer used internally (jeremyevans)

* Allow String#lit to take arguments and return a SQL::PlaceholderLiteralString (jeremyevans)

* Add Model#set_associated_object, used by the many_to_one setter method, for easier overriding (jeremyevans)

* Allow use of database independent types when casting (jeremyevans)

* Give association datasets knowledge of the model object that created them and the related association reflection (jeremyevans)

* Make Dataset#select, #select_more, #order, #order_more, and #get take a block that yields a SQL::VirtualRow, similar to #filter (jeremyevans)

* Fix stored procedures in MySQL adapter when multiple arguments are used (clivecrous)

* Add :conditions association option, for easier filtering of associated objects (jeremyevans)

* Add :clone association option, for making clones of existing associations (jeremyevans)
