@@ -1,5 +1,7 @@
 === HEAD
 
+* Deprecate String#expr (jeremyevans)
+
 * Deprecate Array#to_sql, String#to_sql, and String#split_sql (jeremyevans)
 
 * Deprecate passing an array to Database#<< (jeremyevans)
